# github-rss-reader

./: .gitignore  Cargo.toml  Dockerfile  action.yml  entrypoint.sh
.github/workflows/: release.yml
src/: main.rs
