[package]
name = "github-rss-reader"
version = "0.1.0"
authors = ["Edd Mann <the@eddmann.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "0.5"
reqwest = { version = "0.11", features = ["blocking"] }
openssl = { version = "=0.10.33", features = ["vendored"] }
tera = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
